--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">BookShelf</string>
+    <string name="nav_home">Home</string>
+    <string name="nav_profile">Profile</string>
+    <string name="nav_update_profile">Update Profile</string>
+    <string name="nav_public_booklist">Public Booklist</string>
+    <string name="nav_own_booklist">Own Booklist</string>
+    <string name="nav_wishlist">Wishlist</string>
+    <string name="nav_requests">Requests</string>
+    <string name="nav_requested_books">My Orders</string>
+    <string name="nav_borrowed_books">Borrowed Books</string>
+    <string name="nav_lent_books">Lent Books</string>
+    <string name="nav_bookmarks">Bookmarks</string>
+    <string name="nav_help">Help and Support</string>
 </resources>
