--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BookShelf</string>
+    <string name="invalid_login_msg">Login Invalid</string>
+    <string name="successful_login">Login Success!!</string>
+    <string name="unsuccessful_login">Login Failed</string>
 </resources>
